fix size splash

--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,13 +1,10 @@
 <ion-content  padding>
   <form #form="ngForm">
       <div class="tittle" text-center>
-          <h3 align="center">Tabla didactica!</h3>
-      </div>
-    <ion-grid>
-      <div>
-        <img src="" alt="">
-      </div>
-        
+          <h3 align="center">Conversaciones en el aula!</h3>
+          <img src="../../assets/kids-removebg-preview.png"  class="img" alt="">
+     </div>  
+    <ion-grid>    
       <ion-row  justify-content-center>
         <ion-col align-self-center size-md="6" size-lg="5" size-xs="12">
           
