--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,7 +1,7 @@
 <ion-content  padding>
   <form #form="ngForm">
       <div class="tittle" text-center>
-          <h3 align="center">Conversaciones en el aula!</h3>
+          <h3 align="center">Tabla didactica!</h3>
           <img src="../../assets/kids-removebg-preview.png"  class="img" alt="">
      </div>  
     <ion-grid>    
